logs/go_to_poi/build.make.021.log
[35m[1mScanning dependencies of target go_to_poi[0m
[  0%] Built target geometry_msgs_generate_messages_cpp
[  0%] Built target geometry_msgs_generate_messages_py
[  0%] Built target geometry_msgs_generate_messages_nodejs
[  0%] Built target geometry_msgs_generate_messages_lisp
[ 15%] Built target talker_pose
[ 30%] Built target talker_poi
[ 38%] [32mBuilding CXX object CMakeFiles/go_to_poi.dir/src/go_to_poi.cpp.o[0m
[ 38%] Built target geometry_msgs_generate_messages_eus
[ 38%] Built target _go_to_poi_generate_messages_check_deps_poi
[ 53%] Built target go_to_poi_generate_messages_eus
[ 69%] Built target go_to_poi_generate_messages_nodejs
[ 69%] Built target go_to_poi_generate_messages_lisp
[ 84%] Built target go_to_poi_generate_messages_py
[ 92%] Built target go_to_poi_generate_messages_cpp
[ 92%] Built target go_to_poi_generate_messages
/home/hyun1270/competition_ws/woohyun_ws/src/go_to_poi/src/go_to_poi.cpp: In function ‘void poi_array_sub(const ConstPtr&)’:
/home/hyun1270/competition_ws/woohyun_ws/src/go_to_poi/src/go_to_poi.cpp:34:9: error: ‘calculate_range’ was not declared in this scope
         calculate_range(current_pos, temp_poi, &range);
         ^~~~~~~~~~~~~~~
/home/hyun1270/competition_ws/woohyun_ws/src/go_to_poi/src/go_to_poi.cpp:34:9: note: suggested alternative: ‘copy_file_range’
         calculate_range(current_pos, temp_poi, &range);
         ^~~~~~~~~~~~~~~
         copy_file_range
/home/hyun1270/competition_ws/woohyun_ws/src/go_to_poi/src/go_to_poi.cpp:40:9: error: expected ‘;’ before ‘}’ token
         }
         ^
CMakeFiles/go_to_poi.dir/build.make:62: recipe for target 'CMakeFiles/go_to_poi.dir/src/go_to_poi.cpp.o' failed
make[2]: *** [CMakeFiles/go_to_poi.dir/src/go_to_poi.cpp.o] Error 1
CMakeFiles/Makefile2:1361: recipe for target 'CMakeFiles/go_to_poi.dir/all' failed
make[1]: *** [CMakeFiles/go_to_poi.dir/all] Error 2
Makefile:140: recipe for target 'all' failed
make: *** [all] Error 2
